kubernetes-files-istio/configuration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: configservice
  name: configservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configservice
  template:
    metadata:
      labels:
        app: configservice
    spec:
      containers:
      - name: configservice
        image: gcr.io/devnexus-balloons/configuration-service-q
        ports:
          - containerPort: 8080
