kubernetes-files-istio/gameserver-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: gameserver
  name: gameserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameserver
  template:
    metadata:
      labels:
        app: gameserver
    spec:
      containers:
      - name: gameserver
        image: gcr.io/devnexus-balloons/balloon-game-server
        ports:
          - containerPort: 8080
        volumeMounts:
            - name: public-key
              mountPath: "/usr/app"
              readOnly: true
      volumes:
        - name: public-key
          secret:
            secretName: jwt-public-key
            items:
              - key: publicKey
                path: publicKey
        # resources:
        #   requests:
        #     memory: "300Mi"
        #     cpu: "250m" # 1/4 core
        #   limits:
        #     memory: "400Mi"
        #     cpu: "1000m" # 1 core
        # livenessProbe:
        #   httpGet:
        #       port: 8080
        #       path: /
        #   initialDelaySeconds: 1
        #   periodSeconds: 5
        #   timeoutSeconds: 2
        # readinessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 8080
        #   initialDelaySeconds: 1
        #   periodSeconds: 3
