kubernetes-files-istio/configuration-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: configservice
  labels:
    app: configservice
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"8080":{}}}'
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: configservice
  type: ClusterIP
