kubernetes-files-istio/gameserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: game
  name: gameserver
  labels:
    app: gameserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: tcp
    port: 443
    targetPort: 8443  
  selector:
    app: gameserver
  type: ClusterIP
