kubernetes-files-istio/gameclient-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gameclient
spec:
  hosts:
  - "*"
  gateways:
  - game-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: gameclient
      weight: 100
